# Simple_Navigator

./: .gitignore
src/: CMakeLists.txt  Makefile
src/backend/: CMakeLists.txt
src/backend/includes/: Graph.h  GraphAlgorithms.h
src/backend/src/: Graph.cc  GraphAlgorithms.cc
src/containers/: CMakeLists.txt  s21_base_container.h
src/containers/includes/: cpp_realloc.h  s21_queue.h  s21_stack.h
src/containers/matrix/includes/: matrix.h
src/containers/matrix/src/: matrix.cc
src/containers/queue/includes/: s21_queue.h
src/containers/queue/src/: s21_queue.cc
src/containers/src/: s21_matrix.cc  s21_queue.cc  s21_stack.cc
src/containers/stack/includes/: s21_stack.h
src/containers/stack/src/: s21_stack.cc
src/examples/: big_graph.txt  djikstra_test.txt  djikstra_test_2.txt  djikstra_test_3.txt  graph1.dot  graph1.txt  graph2.txt  graph3.txt  graph4.txt  least_tree.txt  least_tree_2.txt  or_graph1.txt  or_graph2.txt  test.dot  test2.dot
src/frontend/: CMakeLists.txt
src/frontend/src/: main.cc  ui_menu.cc  ui_menu.h
src/s21_graph/: CMakeLists.txt
src/s21_graph/includes/: s21_graph.h
src/s21_graph/src/: s21_graph.cc
src/s21_graph_algorithms/: CMakeLists.txt
src/s21_graph_algorithms/includes/: Ant.h  AntColony.h  ColonyData.h  TsmResult.h  s21_graph_algorithms.h
src/s21_graph_algorithms/src/: s21_graph_algorithms.cc
src/tests/: CMakeLists.txt  main.cc
src/tests/src/: test.cc
